--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,9 @@
     "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@components/*": ["./src/components/*"],
+      "@common/*": ["./src/common/*"]
     }
   }
 }
