--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "set PORT=9090&&craco start",
     "build": "craco build",
     "test": "craco test"
   },
